# capops-processor

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  FlightData.proto  README.md  README_test.md  configuration.cfg  main.cpp
.github/workflows/: cd.yml  ci.yml  continuous-integration.yml
include/app/: ProcessorApp.hpp
include/compute/: ComputeData.hpp  Grid.hpp
include/config/: Config.hpp
include/domain/: RiskEvent.hpp  Sector.hpp  SectorSummary.hpp  Track.hpp  WeatherCell.hpp
include/domain/types/: Position.hpp  ProcessingResult.hpp  SectorState.hpp  SourceType.hpp  WeatherSeverity.hpp
include/ingest/: IngestService.hpp
include/ingestion/: IDataSource.hpp
include/ingestion/sources/: SimSource.hpp
include/publish/: ProtoMapper.hpp  RedisPublisher.hpp
include/simulator/: RadarSimulator.hpp  SimpleTestSimulator.hpp  WeatherSimulator.hpp
include/sources/: TrackSourceOpenSky.hpp  TrackSourceSimulated.hpp  WeatherSourceOpenMeteo.hpp  WeatherSourceSimulated.hpp
include/sources/interfaces/: ITrackSource.hpp  IWeatherSource.hpp
include/sources/simulations/: RadarSimulator.hpp  WeatherSimulator.hpp
include/utils/: WeatherPatternUtils.hpp
include/utils/time/: IsoTimestamp.hpp
proto/: FlightData.proto
src/app/: ProcessorApp.cpp
src/compute/: ComputeData.cpp  Grid.cpp
src/config/: Config.cpp
src/domain/: RiskEvent.cpp  Sector.cpp  SectorSummary.cpp  Track.cpp  WeatherCell.cpp
src/domain/types/: SectorState.cpp  WeatherSeverity.cpp
src/ingest/: IngestService.cpp
src/ingestion/: IngestService.cpp
src/ingestion/sources/: SimSource.cpp
src/publish/: ProtoMapper.cpp  RedisPublisher.cpp
src/simulator/: RadarSimulator.cpp  SimpleTestSimulator.cpp  WeatherSimulator.cpp
src/sources/: TrackSourceOpenSky.cpp  TrackSourceSimulated.cpp  WeatherSourceOpenMeteo.cpp  WeatherSourceSimulated.cpp
src/sources/simulations/: RadarSimulator.cpp  WeatherSimulator.cpp
src/utils/: WeatherPatternUtils.cpp
src/utils/time/: IsoTimestamp.cpp
tests/: test.cpp  test_config_utils.cpp  test_helpers.hpp
tests/compute/: test_compute_data.cpp  test_grid.cpp
tests/domain/: test_domain.cpp
tests/integration/: test_integration.cpp
tests/proto/: test_proto.cpp
tests/redis/: test_redis.cpp
tests/weather/: test_weather.cpp
